migrate on heroku

--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -307,7 +307,7 @@
 				    <div class="content">
 					    <h2>
 					    	<?php explode_and_echo('**', $diplomaleft['nonth'], $number) ;?>
-					    	<?= $diplomaleft['Year'] ;?>
+					    	<?= $diplomaleft['year'] ;?>
 					    </h2>
 					    <h3>
 					    	<?php explode_and_echo('**', $diplomaleft['title'], $number) ;?>
@@ -332,7 +332,7 @@
 				    <div class="content">
 				    	<h2>
 				    		<?php explode_and_echo('**', $diplomaright['month'], $number) ;?>
-				    		<?= $diplomaright['Year'] ;?>
+				    		<?= $diplomaright['year'] ;?>
 					    </h2>
 					    <h3>
 					    	<?php explode_and_echo('**', $diplomaright['title'], $number) ;?>
