--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -306,7 +306,7 @@
 			  	<div class="diplomas-left">
 				    <div class="content">
 					    <h2>
-					    	<?php explode_and_echo('**', $diplomaleft['nonth'], $number) ;?>
+					    	<?php explode_and_echo('**', $diplomaleft['month'], $number) ;?>
 					    	<?= $diplomaleft['year'] ;?>
 					    </h2>
 					    <h3>
