migrate on heroku 4

--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -313,7 +313,7 @@
 					    	<?php explode_and_echo('**', $diplomaleft['title'], $number) ;?>
 					    </h3>
 					    <img src="IMG/<?= $diplomaleft['image'] ;?>">
-					    <p><?= "« ".$diplomaleft['Description']. " »";?>
+					    <p><?= "« ".$diplomaleft['description']. " »";?>
 					    <a href="<?= $diplomaleft['reference'] ;?>" target="_blank"><sup>[réf.]</sup></a>
 					    </p>
 				    </div>
