--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -385,9 +385,9 @@
 			<li><b><?= $credits ?></b></li>
 			<li>© 2018 Codeur et Directeur de la publication</li>
 			<li><i class="fas fa-user-circle"></i> Maxime Jacquette</li>
-			<li><i class="fas fa-envelope-open"></i> maxime.j.pro@free.fr</li>
+			<li><i class="fas fa-envelope-open"></i> maxime.j.sfr@free.fr</li>
 			<li><i class="fas fa-phone-volume"></i> +33 7 83 89 96 37</li>
-			<li><i class="fas fa-location-arrow"></i>Lattes, France</li>
+			<li><i class="fas fa-location-arrow"></i> Lattes, France</li>
 			<li>Mis en ligne par Heroku</li>
 			<li></li> 
 			<li></li>
@@ -395,21 +395,5 @@
 			<li></li>
 		</ul>
 	</footer>
-	<!-- phpmyvisites -->
-	<a href="http://st.free.fr/" title="phpMyVisites | Open source web analytics" 
-	onclick="window.open(this.href);return(false);"><script type="text/javascript">
-	<!--
-	var a_vars = Array();
-	var pagename='';
-
-	var phpmyvisitesSite = 293752;
-	var phpmyvisitesURL = "http://st.free.fr/phpmyvisites.php";
-	//-->
-	</script>
-	<script language="javascript" src="http://st.free.fr/phpmyvisites.js" type="text/javascript"></script>
-	<object><noscript><p>phpMyVisites | Open source web analytics
-	<img src="http://st.free.fr/phpmyvisites.php" alt="Statistics" style="border:0" />
-	</p></noscript></object></a>
-	<!-- /phpmyvisites --> 
 </body>
 </html>
