--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -144,7 +144,7 @@
 				    </div>
 				    <div class="hex-row even">
 				        <?php foreach($mids as $mid): ?>
-						<div class="hex" value="<?= $mid['iD'] ?>">
+						<div class="hex" value="<?= $mid['id'] ?>">
 				        	<div class="top"></div>
 				        	<div class="middle"><img src="IMG/<?= $mid['image'] ?>"></div>
 				        	<div class="bottom"></div>
