--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   	<link rel="stylesheet" href="//resources/demos/style.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="IMG/favicon_package_v0.16/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="IMG/favicon_package_v0.16/favicon.ico">
   	<link rel="stylesheet" href="/resources/demos/style.css">
 	<script src="JS/slides/jquery.flexslider.js"></script>
 	<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
