--- a/PHTML/contact-fr.phtml
+++ b/PHTML/contact-fr.phtml
@@ -51,7 +51,7 @@
 		</div>
 		<div id="downloads-2">
 			<h1>Télécharger</h1>
-			<a href="CV-s/CV-FR.pdf" download><img src="CV-s/pic-cvfr.png"></a>
+			<a href="CV-s/Maxime's Resume (3).pdf" download><img src="CV-s/pic-cvfr.png"></a>
 		</div>
 	</div>
 </div>
