--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -90,7 +90,7 @@
 				</div>
 				<div class="introduction-list">
 					<img src="IMG/149059.svg">
-					<h4><?= $introduction3 ?></h4>
+					<a href="https://www.google.fr/maps/place/34970+Lattes/@43.5658978,3.8585773,12.35z/data=!4m5!3m4!1s0x12b6b003830534e9:0x4078821166ac700!8m2!3d43.567296!4d3.896473" target="_blank"><h4><?= $introduction3 ?></h4></a>
 				</div>
 				<div class="introduction-list">
 					<img src="IMG/616487.svg">
